--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django-crispy-forms = "*"
 crispy-bootstrap5 = "*"
 pillow = "*"
 drf-nested-routers = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
